# chaos-regex

./: .gitignore  Cargo.toml  LICENSE  Makefile  bindings.h  make.bat  occultist.json  regex.c  test.kaos  test.out
.github/workflows/: memcheck.yml  tests.yml
error-gen/: Cargo.toml
error-gen/src/: lib.rs
src/: error.rs  lib.rs
