[package]
name = "chaos-regex"
version = "0.1.0"
authors = ["Ben Aaron Goldberg <ben@benaaron.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.34"
regex = "1.4.2"

[dependencies.error-gen]
path = "./error-gen"

[build-dependencies]
cbindgen = "0.15.0"

[workspace]
members = [
	"error-gen"
]
