[package]
name = "error-gen"
version = "0.1.0"
authors = ["Ben Aaron Goldberg <ben@benaaron.dev>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.24"

[dependencies.syn]
version = "1.0"
features = ["full"]
